14.ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  rules:
    # Rule for direct access using the ELB hostname
    - host: www.patient-bio.majedurnitol.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 4000
          # - path: /api
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: explorer
          #       port:
          #         number: 80
          # - path: /explorer
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: explorer
          #       port:
          #         number: 8080
          # - path: /grafana
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: grafana
          #       port:
          #         number: 3000

  # Uncomment the below section if you want TLS enabled in the future
  # tls:
  #   - hosts:
  #       - ad138f92e9211416d8e780faa5f9716c-e9380dd2942acabe.elb.us-east-1.amazonaws.com
  #     secretName: tls-cert
